# nilm-energy-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/ versions/: 20260701_0001_initial_schema.py
backend/alembic/versions/: 20260701_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: analytics.py  anomalies.py  auth.py  demo.py  devices.py  energy_metrics.py  homes.py  live_nilm.py  nilm.py  realtime.py  system.py  users.py
backend/app/core/: config.py  security.py
backend/app/infrastructure/database/: base.py  session.py
backend/app/ml/: __init__.py
backend/app/ml/datasets/: __init__.py  lab_demo.py  profiling.py  redd_loader.py  refit_loader.py  schema.py  uk_dale_loader.py
backend/app/ml/evaluation/: __init__.py  metrics.py  reports.py
backend/app/ml/models/: __init__.py  baseline_threshold.py  random_forest.py  seq2point.py
backend/app/ml/preprocessing/: __init__.py  labeling.py  (+2 more)
backend/app/schemas/: analytics.py  anomaly.py  auth.py  demo.py  device.py  energy_metric.py  home.py  ingestion.py  live_nilm.py  nilm.py  realtime.py  user.py
backend/app/services/: ai_analysis.py  demo_data.py  ingestion_normalizer.py  live_nilm.py  mqtt_consumer.py  mqtt_publisher.py  nilm_analysis.py  nilm_anomaly_detection.py  realtime_metrics.py  redis_streams.py
backend/app/tools/: convert_uk_dale.py  seed_demo_data.py
backend/app/workers/: __init__.py  metrics_writer.py
(+101 files in other folders)
